--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           ref: next
 
-      - name: test
+      - name: copy-source
         run: |
-          scp README.md runner@192.168.110.105:
-          echo hi2
+          ssh runner@192.168.110.105 'mkdir -p deploy/next'
+          scp * runner@192.168.110.105:deploy/next/
