--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 networks:
-  elasticsearch_default:
+  elasticsearch_next:
     name: $DOCKER_NETWORK
 
 volumes:
@@ -10,7 +10,7 @@ volumes:
 
 services:
   elasticsearch:
-    container_name: elasticsearch
+    container_name: $ELASTICSEARCH_CONTAINER_NAME
     restart: always
     image: $ELASTICSEARCH_IMAGE
     environment:
@@ -27,22 +27,22 @@ services:
     cap_add:
       - IPC_LOCK
     volumes:
-      - elasticsearch:/usr/share/elasticsearch/data
+      - $ELASTICSEARCH_CONTAINER_NAME:/usr/share/elasticsearch/data
     ports:
-      - 9200:9200
-      - 9300:9300
+      - 9200:$ELASTICSEARCH_EXPOSE_9200
+      - 9300:$ELASTICSEARCH_EXPOSE_9300
     networks:
       - $DOCKER_NETWORK
 
   kibana:
-    container_name: kibana
+    container_name: $KIBANA_CONTAINER_NAME
     restart: always
     image: $KIBANA_IMAGE
     environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://$ELASTICSEARCH_CONTAINER_NAME:9200
     ports:
-      - 5601:5601
+      - 5601:$KIBANA_EXPOSE_5601
     depends_on:
-      - elasticsearch
+      - $ELASTICSEARCH_CONTAINER_NAME
     networks:
       - $DOCKER_NETWORK
