--- a/next.docker-compose.yml
+++ b/next.docker-compose.yml
@@ -10,8 +10,20 @@ volumes:
 
 services:
   elasticsearch:
-    restart: always
     image: docker.elastic.co/elasticsearch/elasticsearch:7.14.1
+    deploy:
+      restart_policy:
+        condition: 'any'
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+      resources:
+        limits:
+          cpus: '2'
+          memory: 2G
+        reservations:
+          cpus: '0.25'
+          memory: 500M
     environment:
       - xpack.security.enabled=false
       - xpack.license.self_generated.type=basic
@@ -34,8 +46,20 @@ services:
       - elk_next
 
   kibana:
-    restart: always
     image: docker.elastic.co/kibana/kibana:7.14.1
+    deploy:
+      restart_policy:
+        condition: 'any'
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+      resources:
+        limits:
+          cpus: '2'
+          memory: 2G
+        reservations:
+          cpus: '0.25'
+          memory: 500M    
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     ports:
