--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -13,7 +13,11 @@ jobs:
         with:
           ref: next
 
-      - name: copy-source
+      - name: Copy source
         run: |
           ssh runner@192.168.110.105 'mkdir -p deploy/next'
           scp * runner@192.168.110.105:deploy/next/
+
+      - name: Deploy stack
+        run: |
+          sudo /opt/deploy-docker-stack.sh
