Updated repo layout to clarify multiple elk stack versions

--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Copy source
         run: |
           ssh runner@192.168.110.105 'mkdir -p deploy/next'
-          scp * runner@192.168.110.105:deploy/next/
+          scp src/next/* runner@192.168.110.105:deploy/next/
 
       - name: Deploy stack
         run: |
