--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Deploy stack
         run: |
-          sudo /opt/deploy-docker-stack.sh
+          ssh runner@192.168.110.105 'sudo /opt/deploy-docker-stack.sh'
