--- a/nginx/conf.d/7.14.conf
+++ b/nginx/conf.d/7.14.conf
@@ -2,12 +2,12 @@
 server {
 
   listen [::]:80;
-  listen 80 default_server;
-  server_name next.kibana.saeon.int;
+  listen 80;
+  server_name 7.14.kibana.saeon.int;
   
   location / {
 
-    proxy_pass http://127.0.0.1:5601;
+    proxy_pass http://127.0.0.1:5602;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -22,11 +22,11 @@ server {
 
   listen [::]:80;
   listen 80;
-  server_name next.elasticsearch.saeon.int;
+  server_name 7.14.elasticsearch.saeon.int;
   
   location / {
 
-    proxy_pass http://127.0.0.1:9200;
+    proxy_pass http://127.0.0.1:9201;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
