--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -13,11 +13,17 @@ jobs:
         with:
           ref: next
 
-      - name: Copy source
-        run: |
-          ssh runner@elasticsearch.saeon.int 'mkdir -p deploy/next'
-          scp src/next/* runner@elasticsearch.saeon.int:deploy/next/
+      - name: Execute SSH commands on remote server
+        uses: appleboy/ssh-action@master
+        with:
+            host: elasticsearch.saeon.int
+            script: whoami
 
-      - name: Deploy stack
-        run: |
-          ssh runner@elasticsearch.saeon.int 'sudo /opt/deploy-docker-stack.sh /home/runner/deploy/next/docker-compose.yml elk_next'
+      # - name: Copy source
+      #   run: |
+      #     ssh runner@elasticsearch.saeon.int 'mkdir -p deploy/next'
+      #     scp src/next/* runner@elasticsearch.saeon.int:deploy/next/
+
+      # - name: Deploy stack
+      #   run: |
+      #     ssh runner@elasticsearch.saeon.int 'sudo /opt/deploy-docker-stack.sh /home/runner/deploy/next/docker-compose.yml elk_next'
