--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -17,6 +17,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
             host: elasticsearch.saeon.int
+            username: ${{ secrets.SAEON_RUNNER_HOST_USERNAME }}
             script: whoami
 
       # - name: Copy source
