--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -20,7 +20,7 @@ jobs:
             username: ${{ secrets.HOST_USERNAME }}
             password: ${{ secrets.HOST_PASSWORD }}
             port: ${{ secrets.HOST_SSH_PORT }}
-            script: whoami
+            script: mkdir -p deploy/next
 
       # - name: Copy source
       #   run: |
