--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -13,14 +13,25 @@ jobs:
         with:
           ref: next
 
-      - name: Execute SSH commands on remote server
+      - name: (SSH) Ensure deployment directory exists
         uses: appleboy/ssh-action@master
         with:
-            host: elasticsearch.saeon.int
-            username: ${{ secrets.HOST_USERNAME }}
-            password: ${{ secrets.HOST_PASSWORD }}
-            port: ${{ secrets.HOST_SSH_PORT }}
-            script: mkdir -p deploy/next
+          host: elasticsearch.saeon.int
+          username: ${{ secrets.HOST_USERNAME }}
+          password: ${{ secrets.HOST_PASSWORD }}
+          port: ${{ secrets.HOST_SSH_PORT }}
+          script: mkdir -p deploy/next
+
+      - name: (SCP) Copy Docker files to host
+        uses: appleboy/scp-action@master
+        with:
+          host: elasticsearch.saeon.int
+          username: ${{ secrets.HOST_USERNAME }}
+          password: ${{ secrets.HOST_PASSWORD }}
+          port: ${{ secrets.HOST_SSH_PORT }}
+          source: "src/next/*"
+          target: "deploy/next"
+           
 
       # - name: Copy source
       #   run: |
