--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -32,12 +32,11 @@ jobs:
           source: "src/next/*"
           target: "deploy/next"
            
-
-      # - name: Copy source
-      #   run: |
-      #     ssh runner@elasticsearch.saeon.int 'mkdir -p deploy/next'
-      #     scp src/next/* runner@elasticsearch.saeon.int:deploy/next/
-
-      # - name: Deploy stack
-      #   run: |
-      #     ssh runner@elasticsearch.saeon.int 'sudo /opt/deploy-docker-stack.sh /home/runner/deploy/next/docker-compose.yml elk_next'
+      - name: (SSH) Deploy docker stack
+        uses: appleboy/ssh-action@master
+        with:
+          host: elasticsearch.saeon.int
+          username: ${{ secrets.HOST_USERNAME }}
+          password: ${{ secrets.HOST_PASSWORD }}
+          port: ${{ secrets.HOST_SSH_PORT }}
+          script: sudo /opt/deploy-docker-stack.sh /home/runner/deploy/next/docker-compose.yml elk_next
