Updated next and 7.14 deployments to be more secure

--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -32,7 +32,7 @@ jobs:
           source: "src/next/*"
           target: "deploy/next"
            
-      - name: (SSH) Deploy docker stack
+      - name: (SSH) Deploy Docker stack
         uses: appleboy/ssh-action@master
         with:
           host: elasticsearch.saeon.int
