--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -13,14 +13,14 @@ jobs:
         with:
           ref: next
 
-      - name: (SSH) Ensure deployment directory exists
-        uses: appleboy/ssh-action@master
-        with:
-          host: elasticsearch.saeon.int
-          username: ${{ secrets.HOST_USERNAME }}
-          password: ${{ secrets.HOST_PASSWORD }}
-          port: ${{ secrets.HOST_SSH_PORT }}
-          script: mkdir -p deploy/next
+      # - name: (SSH) Ensure deployment directory exists
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: elasticsearch.saeon.int
+      #     username: ${{ secrets.HOST_USERNAME }}
+      #     password: ${{ secrets.HOST_PASSWORD }}
+      #     port: ${{ secrets.HOST_SSH_PORT }}
+      #     script: mkdir -p deploy/next
 
       - name: (SCP) Copy Docker files to host
         uses: appleboy/scp-action@master
@@ -29,8 +29,8 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           password: ${{ secrets.HOST_PASSWORD }}
           port: ${{ secrets.HOST_SSH_PORT }}
-          source: "src/next/*"
-          target: "deploy/next"
+          source: "src/next/docker-compose.yml"
+          target: "deploy/next/docker-compose.yml"
            
       - name: (SSH) Deploy Docker stack
         uses: appleboy/ssh-action@master
