--- a/.github/workflows/deploy-7.14.yml
+++ b/.github/workflows/deploy-7.14.yml
@@ -13,15 +13,6 @@ jobs:
         with:
           ref: 7.14
 
-      - name: (SSH) Ensure deployment directory exists
-        uses: appleboy/ssh-action@master
-        with:
-          host: elasticsearch.saeon.int
-          username: ${{ secrets.HOST_USERNAME }}
-          password: ${{ secrets.HOST_PASSWORD }}
-          port: ${{ secrets.HOST_SSH_PORT }}
-          script: mkdir -p deploy/7.14
-
       - name: (SCP) Copy Docker files to host
         uses: appleboy/scp-action@master
         with:
@@ -29,8 +20,8 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           password: ${{ secrets.HOST_PASSWORD }}
           port: ${{ secrets.HOST_SSH_PORT }}
-          source: "src/7.14/*"
-          target: "deploy/7.14"
+          source: "src/7.14/docker-compose.yml"
+          target: "deploy"
 
       - name: (SSH) Deploy Docker stack
         uses: appleboy/ssh-action@master
@@ -39,4 +30,4 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           password: ${{ secrets.HOST_PASSWORD }}
           port: ${{ secrets.HOST_SSH_PORT }}
-          script: sudo /opt/deploy-docker-stack.sh /home/runner/deploy/7.14/docker-compose.yml elk_7_14
+          script: sudo /opt/deploy-docker-stack.sh /home/runner/deploy/src/7.14/docker-compose.yml elk_7_14
