--- a/.github/workflows/deploy-7.14.yml
+++ b/.github/workflows/deploy-7.14.yml
@@ -9,12 +9,12 @@ jobs:
   deploy:
     runs-on: github-runner.saeon.int
     steps:
-      - uses: actions/checkout@v2
+      - uses: SAEON/checkout@v2
         with:
           ref: 7.14
 
       - name: (SCP) Copy Docker files to host
-        uses: appleboy/scp-action@master
+        uses: SAEON/scp-action@master
         with:
           host: elasticsearch.saeon.int
           username: ${{ secrets.HOST_USERNAME }}
@@ -24,7 +24,7 @@ jobs:
           target: "deploy"
 
       - name: (SSH) Deploy Docker stack
-        uses: appleboy/ssh-action@master
+        uses: SAEON/ssh-action@master
         with:
           host: elasticsearch.saeon.int
           username: ${{ secrets.HOST_USERNAME }}
