--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -9,12 +9,12 @@ jobs:
   deploy:
     runs-on: github-runner.saeon.int
     steps:
-      - uses: actions/checkout@v2
+      - uses: SAEON/checkout@v2
         with:
           ref: next
 
       - name: (SCP) Copy Docker files to host
-        uses: appleboy/scp-action@master
+        uses: SAEON/scp-action@master
         with:
           host: elasticsearch.saeon.int
           username: ${{ secrets.HOST_USERNAME }}
