--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -16,7 +16,7 @@ jobs:
       - name: (SCP) Copy Docker files to host
         uses: SAEON/scp-action@master
         with:
-          host: elasticsearch.saeon.int
+          host: ${{ secrets.HOSTNAME }}
           username: ${{ secrets.HOST_USERNAME }}
           password: ${{ secrets.HOST_PASSWORD }}
           port: ${{ secrets.HOST_SSH_PORT }}
@@ -26,7 +26,7 @@ jobs:
       - name: (SSH) Deploy Docker stack
         uses: SAEON/ssh-action@master
         with:
-          host: elasticsearch.saeon.int
+          host: ${{ secrets.HOSTNAME }}
           username: ${{ secrets.HOST_USERNAME }}
           password: ${{ secrets.HOST_PASSWORD }}
           port: ${{ secrets.HOST_SSH_PORT }}
