--- a/.github/workflows/integrate-7.14.yml
+++ b/.github/workflows/integrate-7.14.yml
@@ -2,11 +2,11 @@ name: integrate@7.14
 
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron:  '*/5 * * * *'
 
 jobs:
   integrate-saeon-odp:
-    runs-on: github-runner.saeon.int
+    runs-on: ubuntu-latest
     steps:
       - name: Check out source code
         uses: actions/checkout@v2
@@ -14,6 +14,5 @@ jobs:
           ref: 7.14
       
       - name: Test shell script
-        shell: bash
         run: |
           echo "TODO"
