--- a/.github/workflows/integrate-7.14.yml
+++ b/.github/workflows/integrate-7.14.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   integrate-saeon-odp:
-    runs-on: ubuntu-latest
+    runs-on: github-runner.saeon.int
     steps:
       - name: Check out source code
         uses: actions/checkout@v2
