--- a/src/8.1/docker-compose.yml
+++ b/src/8.1/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
     attachable: true    
 
 volumes:
-  elk_8.1:
+  data:
     driver: local
 
 services:
@@ -42,7 +42,7 @@ services:
     cap_add:
       - IPC_LOCK
     volumes:
-      - elk_8.1:/usr/share/elasticsearch/data
+      - data:/usr/share/elasticsearch/data
     ports:
       - 9202:9200
       - 9302:9300
