--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,12 @@
   "cSpell.words": [
     "adduser",
     "appleboy",
+    "asciifolding",
     "epel",
     "mkdir",
-    "NOPASSWD"
+    "nccis",
+    "NOPASSWD",
+    "Parens",
+    "qgis"
   ]
 }
