--- a/.github/workflows/nccis-qgis-index.yml
+++ b/.github/workflows/nccis-qgis-index.yml
@@ -5,12 +5,12 @@ on:
     - cron:  '0 0 3 * *'
   push:
     branches:
-      - 7.14
+      - main
 
 env:
   REGISTRY: ghcr.io
   API_IMAGE_NAME: saeon/elk-integration
-  BRANCH_REF: 7.14
+  BRANCH_REF: main
 
 jobs:
   build-script-image:
