--- a/.github/workflows/nccis-qgis-index.yml
+++ b/.github/workflows/nccis-qgis-index.yml
@@ -52,7 +52,8 @@ jobs:
     runs-on: github-runner.saeon.int
     steps:
       - name: Execute integration
-        run: docker run hello-world
+        run: |
+          docker run hello-world
         # run: >-
         #   docker run \
         #     -e ES_ADDRESS=7.14.elasticsearch.saeon.int \
