--- a/.github/workflows/nccis-qgis-index.yml
+++ b/.github/workflows/nccis-qgis-index.yml
@@ -2,7 +2,7 @@ name: integration@nccis-qgis-index
 
 on:
   schedule:
-    - cron:  '0 0 3 * *'
+    - cron:  '0 3 * * *'
   push:
     branches:
       - main
