Updated actions to use dispatch triggers

--- a/.github/workflows/deploy-7.14.yml
+++ b/.github/workflows/deploy-7.14.yml
@@ -1,9 +1,6 @@
 name: deployment@7.14
 
-on:
-  push:
-    branches:
-      - 7.14
+on: workflow_dispatch
 
 jobs:
   deploy:
@@ -11,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: 7.14
+          ref: main
 
       - name: (SCP) Copy Docker files to host
         uses: appleboy/scp-action@master
