--- a/src/8.x/docker-compose.yml
+++ b/src/8.x/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 networks:
-  elk_8_1:
-    name: elk_8_1
+  elk_8:
+    name: elk_8_x
     driver: overlay
     attachable: true    
 
@@ -12,7 +12,7 @@ volumes:
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.1.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.2.2
     deploy:
       replicas: 1
       rollback_config:
@@ -47,10 +47,10 @@ services:
       - 9202:9200
       - 9302:9300
     networks:
-      - elk_8_1
+      - elk_8_x
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.1.2
+    image: docker.elastic.co/kibana/kibana:8.2.2
     deploy:
       replicas: 1
       rollback_config:
@@ -71,4 +71,4 @@ services:
     ports:
       - 5603:5601
     networks:
-      - elk_8_1
+      - elk_8_x
