Updated elasticsearch nginx server_name directive to include 8.x path

--- a/nginx/conf.d/8.x.conf
+++ b/nginx/conf.d/8.x.conf
@@ -3,7 +3,7 @@ server {
 
   listen [::]:80;
   listen 80;
-  server_name 8.1.kibana.saeon.int;
+  server_name 8.1.kibana.saeon.int 8.x.kibana.saeon.int;
   
   location / {
 
@@ -22,7 +22,7 @@ server {
 
   listen [::]:80;
   listen 80;
-  server_name 8.1.elasticsearch.saeon.int;
+  server_name 8.1.elasticsearch.saeon.int 8.x.elasticsearch.saeon.int;
   
   location / {
 
