--- a/.github/workflows/deploy-8.yml
+++ b/.github/workflows/deploy-8.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           password: ${{ secrets.HOST_PASSWORD }}
           port: ${{ secrets.HOST_SSH_PORT }}
-          source: "src/8.x/docker-compose.yml"
+          source: "src/8/docker-compose.yml"
           target: "deploy"
 
       - name: (SSH) Deploy Docker stack
@@ -27,4 +27,4 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           password: ${{ secrets.HOST_PASSWORD }}
           port: ${{ secrets.HOST_SSH_PORT }}
-          script: sudo /opt/deploy-docker-stack.sh /home/runner/deploy/src/8.x/docker-compose.yml elk_8
+          script: sudo /opt/deploy-docker-stack.sh /home/runner/deploy/src/8/docker-compose.yml elk_8
